# MSSOAL

./: CMakeLists.txt  OpenALSpatialAudioClient.cpp  OpenALSpatialAudioClient.h  README.md  RegisterProvider.cpp  SpatialAudioObject.cpp  SpatialAudioObject.h  SpatialAudioStream.cpp  alsoft.ini
.github/workflows/: build.yml
examples/: BasicExample.cpp
include/: OpenALSpatialAudioClient.h
src/: OpenALSpatialAudioClient.cpp  SpatialAudioObject.cpp  SpatialAudioObject.h  SpatialAudioStream.cpp  SpatialAudioStream.h  openal_spatial.def
tools/: RegisterProvider.cpp
